# token-factory-cookbook

./: .gitignore  README.md
agents/: README.md
agents/customer_support_resolution_agent/: README.md  agent.py  app.py  env.example  ingest.py  main.py  pyproject.toml  tools.py
agents/customer_support_resolution_agent/data/: faq.md  orders.json  refund_policy.md  shipping_policy.md
agents/langchain/competitive-intelligence-agent/: .gitignore  README.md  agent.py  cli.py  pyproject.toml
agents/langchain/deep-agent-example-1/: pyproject.toml
agents/nebius_travel_planner/: README.md  agent.py  app.py  env.example  main.py  pyproject.toml  requirements.txt  tools.py
api/: README.md  pyproject.toml  test_apis_for_all_models.py
langchain/: README.md
workshops/deep-research-writing-agents-nebius-okahu/: .gitignore  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  skills-lock.json  streamlit_app.py
workshops/deep-research-writing-agents-nebius-okahu/datasets/linkedin_paul_iusztin/: 6-months-ago-i-never-imagined-id-be-hosting-my-own-ai-event.md  6-months-ago-i-never-imagined-id-be-hosting-my-own-ai-event_generated.md  6-months-ago-i-never-imagined-id-be-hosting-my-own-ai-event_guideline.md  6-months-ago-i-never-imagined-id-be-hosting-my-own-ai-event_research.md  6-months-ago-i-never-imagined-id-be-hosting-my-own-ai-event_seed.md  90-of-engineers-think-context-engineering-is-just-about-writ.md  90-of-engineers-think-context-engineering-is-just-about-writ_generated.md  90-of-engineers-think-context-engineering-is-just-about-writ_guideline.md  90-of-engineers-think-context-engineering-is-just-about-writ_research.md  90-of-engineers-think-context-engineering-is-just-about-writ_seed.md  99-of-engineers-skip-the-most-important-part-of-building-age.md  99-of-engineers-skip-the-most-important-part-of-building-age_generated.md  99-of-engineers-skip-the-most-important-part-of-building-age_guideline.md  99-of-engineers-skip-the-most-important-part-of-building-age_research.md  99-of-engineers-skip-the-most-important-part-of-building-age_seed.md  before-you-think-about-rag-agents-or-fine-tuning-you-need-to.md  before-you-think-about-rag-agents-or-fine-tuning-you-need-to_generated.md  before-you-think-about-rag-agents-or-fine-tuning-you-need-to_guideline.md  before-you-think-about-rag-agents-or-fine-tuning-you-need-to_research.md  before-you-think-about-rag-agents-or-fine-tuning-you-need-to_seed.md  heres-the-ingestion-architecture-we-used-to-build-a-digital.md  heres-the-ingestion-architecture-we-used-to-build-a-digital_generated.md  heres-the-ingestion-architecture-we-used-to-build-a-digital_guideline.md  heres-the-ingestion-architecture-we-used-to-build-a-digital_research.md  heres-the-ingestion-architecture-we-used-to-build-a-digital_seed.md  how-do-you-stay-up-to-date-with-everything-in-ai.md  how-do-you-stay-up-to-date-with-everything-in-ai_generated.md  how-do-you-stay-up-to-date-with-everything-in-ai_guideline.md  (+69 more)
workshops/deep-research-writing-agents-nebius-okahu/implement_yourself/: CLAUDE.md  README.md
workshops/deep-research-writing-agents-nebius-okahu/media/: guideline.md  post_3.md  seed.md
workshops/deep-research-writing-agents-nebius-okahu/scripts/: run_dataset_writing.py  test_research_workflow.py  test_writing_workflow.py
(+198 files in other folders)
