[project]
name = "customer-support-resolution-agent"
version = "0.1.0"
description = "SaaS-style customer support agent built with LangChain and Nebius"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-openai>=1.0",
    "langchain-community>=0.4",
    "langchain-text-splitters>=1.0",
    "langgraph>=1.0",
    "faiss-cpu>=1.8.0",
    "streamlit>=1.36.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
]
